syntax = "proto3";

package event.user;

option go_package = "github.com/Yux77Yux/platform_backend/generated/event/user;";

enum Exchange {
  EXCHANGE_REGISTER = 0;
  EXCHANGE_STORE_USER = 1;
  EXCHANGE_STORE_CREDENTIAL = 2;
  EXCHANGE_UPDATE_USER_SPACE = 3;
  EXCHANGE_UPDATE_USER_BIO = 4;
  EXCHANGE_UPDATE_USER_AVATAR = 5;
  EXCHANGE_FOLLOW = 6;
  EXCHANGE_CANCEL_FOLLOW = 7;
  EXCHANGE_UPDATE_USER_STATUS = 8;
  EXCHANGE_DEL_REVIEWER = 9;
  
}

enum Queue {
  QUEUE_REGISTER = 0;
  QUEUE_STORE_USER = 1;
  QUEUE_STORE_CREDENTIAL = 2;
  QUEUE_UPDATE_USER_SPACE = 3;
  QUEUE_UPDATE_USER_BIO = 4;
  QUEUE_UPDATE_USER_AVATAR = 5;
  QUEUE_FOLLOW = 6;
  QUEUE_CANCEL_FOLLOW = 7;
  QUEUE_UPDATE_USER_STATUS = 8;
  QUEUE_DEL_REVIEWER = 9;
  
}

enum RoutingKey {
  KEY_REGISTER = 0;
  KEY_STORE_USER = 1;
  KEY_STORE_CREDENTIAL = 2;
  KEY_UPDATE_USER_SPACE = 3;
  KEY_UPDATE_USER_BIO = 4;
  KEY_UPDATE_USER_AVATAR = 5;
  KEY_FOLLOW = 6;
  KEY_CANCEL_FOLLOW = 7;
  KEY_UPDATE_USER_STATUS = 8;
  KEY_DEL_REVIEWER = 9;
  
}